# timetable_getter_bot

./: .gitignore  README.md  abstract_messages.py  abstract_timetable_getter.py  bot.py  cached_timetable.py  command_regexes.py  config.py  image_cropper.py  log.txt  main_logic.py  messages.py  pyproject.toml  run.py  run_with_recovery.py  test_time_calculations.py  time_related_things.py  timetable.py  timetable_getter.py  utils.py  weird_shit.txt
src/: bot.py  config.py  image_cropper.py  looped_two_ways_iterator.py  time_related_things.py  timetable_days_cacher.py
tests/: test_time_calculations.py
