[tool.poetry]
name = "timetable-getter-bot"
version = "1.0.0"
description = "A bot to listen for new timetables posted by my school's administration"
authors = ["megahomyak <g.megahomyak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "timetable_getter_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
vkbottle = "^4.3.12"
netschoolapi = "^11.0.0"
pillow = "^9.3.0"
lxml = "^4.9.1"
pytz = "^2022.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
