[tool.poetry]
name = "timetable-getter-bot"
version = "1.0.0"
description = "A bot to listen for new timetables posted by my school's administration"
authors = ["megahomyak <g.megahomyak@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
vkbottle = "4.6.1"
netschoolapi = "^11.0.0"
pillow = "^9.3.0"
lxml = "^4.9.1"
margincropper = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
